# tianjin

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
bot/: db.py  main.py
bot/api/: app.py  auth.py  models.py  routes.py  ws.py
bot/execution/: client.py  paper.py  redeemer.py
bot/market/: discovery.py  models.py
bot/price/: feed.py  indicators.py  polymarket_feed.py
bot/risk/: manager.py
bot/strategy/: base.py  momentum.py  signal.py
bot/telegram/: bot.py
bot/utils/: logging.py  metrics.py
config/: deploy.yml  settings.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  ws.ts
frontend/src/components/charts/: EquityCurve.tsx  PriceChart.tsx
frontend/src/components/controls/: BotControls.tsx
frontend/src/components/dashboard/: PortfolioCard.tsx  RiskCard.tsx  StatsCard.tsx  StatusCard.tsx
frontend/src/components/trades/: TradeTable.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Auth.tsx  Dashboard.tsx
frontend/src/types/: index.ts
scripts/: calibrate.py
tests/: test_indicators.py  test_risk.py  test_strategy.py
